gitops/espresso/infrastructure/configs/manafishrov/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov
---
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov-pocket-id
---
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov-vaultwarden
